--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "node": ">=16.0.0"
   },
   "dependencies": {
+    "@codegenie/serverless-express": "^4.16.0",
     "@nestjs/common": "^10.3.2",
     "@nestjs/core": "^10.4.4",
-    "@nestjs/platform-express": "^10.4.4",
+    "@nestjs/platform-express": "^10.4.15",
+    "aws-lambda": "^1.0.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "reflect-metadata": "^0.2.1",
@@ -37,6 +39,7 @@
     "@nestjs/testing": "^10.3.2",
     "@swc/cli": "^0.3.9",
     "@swc/core": "^1.4.0",
+    "@types/aws-lambda": "^8.10.146",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.16",
