fix: remove the zip file in deployment package
fix: error while creating API Gateway with Terraform
feat: add deploy task in VS Code

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
     "recommendations": [
         "esbenp.prettier-vscode",
-        "hashicorp.terraform"
+        "hashicorp.terraform",
+        "sanaajani.taskrunnercode"
     ]
 }
