fix: allow Github Action to assume CI role

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,7 @@ jobs:
       - name: configure aws credentials
         uses: aws-actions/configure-aws-credentials@v1.7.0
         with:
-          role-to-assume: arn:aws:iam::851725582763:role/rat-dev-cicd-role #change to reflect your IAM role’s ARN
-          role-session-name: GitHub_to_AWS_via_FederatedOIDC
+          role-to-assume: arn:aws:iam::851725582763:role/rat-dev-cicd-role
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Sts GetCallerIdentity
