--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,17 +7,15 @@ on:
   pull_request:
     branches: [ main ]
 
-env:
-  AWS_REGION : "eu-central-1"
-
 permissions:
   id-token: write   # This is required for requesting the JWT
   contents: read    # This is required for actions/checkout
 
 jobs:
-  deploy:
-    runs-on: ubuntu-latest
+  deploy-to-dev:
+    name: Deploy to dev
     environment: dev
+    runs-on: ubuntu-latest
     steps:
       - name: clone the repository
         uses: actions/checkout@v3
@@ -44,7 +42,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v1.7.0
         with:
           role-to-assume: arn:aws:iam::851725582763:role/rat-dev-cicd-role
-          aws-region: ${{ env.AWS_REGION }}
+          aws-region: ${{ vars.AWS_REGION }}
 
       - name: set up Terraform CLI for CI server
         uses: hashicorp/setup-terraform@v3
