--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node": ">=16.0.0"
   },
   "dependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.721.0",
     "@codegenie/serverless-express": "^4.16.0",
     "@nestjs/common": "^10.3.2",
     "@nestjs/core": "^10.4.4",
