feat: set up linter and formatter

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,8 @@
 {
-    "recommendations": [
-        "esbenp.prettier-vscode",
-        "hashicorp.terraform",
-        "sanaajani.taskrunnercode"
-    ]
+  "recommendations": [
+    "esbenp.prettier-vscode",
+    "hashicorp.terraform",
+    "sanaajani.taskrunnercode",
+    "orta.vscode-jest"
+  ]
 }
