--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,11 +3,11 @@ name: Connect to an AWS role from a GitHub repository
 # Controls when the action will run. Invokes the workflow on push events but only for the main branch
 on:
   push:
-    branches: [ main ]
+    branches: [main]
 
 permissions:
-  id-token: write   # This is required for requesting the JWT
-  contents: read    # This is required for actions/checkout
+  id-token: write # This is required for requesting the JWT
+  contents: read # This is required for actions/checkout
 
 jobs:
   deploy-to-dev:
@@ -17,7 +17,7 @@ jobs:
     steps:
       - name: clone the repository
         uses: actions/checkout@v3
-      
+
       - name: setup pnpm
         uses: pnpm/action-setup@v4
         with:
@@ -44,7 +44,7 @@ jobs:
       - name: set up Terraform CLI for CI server
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: "1.10.3"
+          terraform_version: '1.10.3'
 
       - name: deploy the app
         working-directory: infra
