--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,21 @@
     "outDir": "./dist",
     "baseUrl": "./",
     "incremental": true,
-    "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+
+    "strictNullChecks": true, // Ensures strict handling of null and undefined
+    "strictBindCallApply": true, // Checks correctness of arguments passed to call, apply, and bind
+    "strictFunctionTypes": true, // Ensures function parameters are more strictly checked
+    "strictPropertyInitialization": false, // Makes sure class properties are correctly initialized
+    "noImplicitAny": true, // Requires explicit type declarations
+    "noImplicitThis": true, // Disallows `this` keyword with an implicit `any` type
+    "alwaysStrict": true, // Ensures `use strict` is always used
+    "noUnusedLocals": true, // Reports unused local variables
+    "noUnusedParameters": true, // Reports unused function parameters
+    "noImplicitReturns": true, // Ensures all code paths in a function return a value
+    "noFallthroughCasesInSwitch": true, // Checks for fallthrough cases in switch statements
+    "forceConsistentCasingInFileNames": true, // Ensures consistent casing in file names
+    "resolveJsonModule": true // Allows importing JSON modules
   }
 }
