--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,8 @@
 {
+  "useTabs": false,
+  "tabWidth": 2,
+  "semi": true,
   "singleQuote": true,
   "trailingComma": "all",
-  "printWidth": 90
+  "printWidth": 85
 }
