feat: set up database seeding

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
     "esbenp.prettier-vscode",
     "hashicorp.terraform",
     "sanaajani.taskrunnercode",
-    "orta.vscode-jest"
+    "orta.vscode-jest",
+    "mongodb.mongodb-vscode"
   ]
 }
