--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/jest/bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "prepare": "husky"
+    "prepare": "husky",
+    "seed:run": "ts-node ./node_modules/typeorm-extension/bin/cli.cjs seed:run -d ./src/database/data-source.ts --preserveFilePaths"
   },
   "lint-staged": {
     "*.ts": "eslint --fix"
@@ -35,8 +36,11 @@
     "@nestjs/platform-express": "^10.4.15",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "reflect-metadata": "^0.2.1",
-    "rxjs": "^7.8.1"
+    "dotenv": "^16.4.7",
+    "mongodb": "^5.8.0",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -50,7 +54,7 @@
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.16",
+    "@types/node": "^20.17.10",
     "@types/supertest": "^6.0.2",
     "esbuild": "^0.14.54",
     "esbuild-plugin-clean": "^1.0.1",
@@ -68,6 +72,7 @@
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
+    "typeorm-extension": "^3.6.3",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.19.0"
   }
