--- a/package.json
+++ b/package.json
@@ -32,8 +32,12 @@
     "@aws-sdk/client-cognito-identity-provider": "^3.721.0",
     "@codegenie/serverless-express": "^4.16.0",
     "@nestjs/common": "^10.3.2",
+    "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.4",
+    "@nestjs/event-emitter": "^2.1.1",
     "@nestjs/platform-express": "^10.4.15",
+    "@nestjs/swagger": "^8.1.0",
+    "@nestjs/typeorm": "^10.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.7",
