--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/core": "^11.1.3",
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/platform-express": "^11.1.3",
+    "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
