--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.0",
     "globals": "^15.15.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
+    "jest-mock-extended": "^4.0.0",
     "prettier": "^3.6.0",
     "prettier-plugin-organize-imports": "^4.1.0",
     "source-map-support": "^0.5.21",
@@ -70,8 +72,7 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.35.0",
-    "jest-mock-extended": "^4.0.0"
+    "typescript-eslint": "^8.35.0"
   },
   "jest": {
     "moduleFileExtensions": [
