feat: add authentication feature

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# Environment
+NODE_ENV=development
+
 # The port number on which the API will listen for incoming HTTP requests
 PORT=6000
 
@@ -8,5 +11,5 @@ DB_USERNAME=
 DB_PASSWORD=
 DB_DATABASE=
 
-# Environment
-NODE_ENV=development
+# Secret key used to sign and verify JWT tokens
+JWT_SECRET=
