--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         uses: ./.github/actions/setup
 
       - name: Run lint
-        run: pnpm lint
+        run: npm run lint
 
   unit-test:
     runs-on: ubuntu-latest
@@ -29,7 +29,7 @@ jobs:
         uses: ./.github/actions/setup
 
       - name: Run tests
-        run: pnpm test
+        run: npm run test
 
   e2e-test:
     runs-on: ubuntu-latest
@@ -60,7 +60,7 @@ jobs:
           PGPASSWORD: test12345
 
       - name: Run migrations
-        run: pnpm migration:run
+        run: npm run typeorm migration:run -- -d src/data-source.ts
         env:
           DB_HOST: localhost
           DB_PORT: 5432
@@ -69,7 +69,7 @@ jobs:
           DB_DATABASE: testdb
 
       - name: Run e2e tests
-        run: pnpm test:e2e
+        run: npm run test:e2e
         env:
           DB_HOST: localhost
           DB_PORT: 5432
